vault-tasks-core/src/parser/snapshots/vault_tasks_core__parser__parser_file_entry__tests__commented_task.snap
---
source: vault-tasks-core/src/parser/parser_file_entry.rs
expression: res.first().unwrap()
---
1 Header
‾‾‾‾‾‾‾‾
	❌ This one is not
