vault-tasks-core/src/parser/snapshots/vault_tasks_core__parser__parser_file_entry__tests__insert_global_tag.snap
---
source: vault-tasks-core/src/parser/parser_file_entry.rs
expression: res
---
Test
‾‾‾‾
	1 Header
	‾‾‾‾‾‾‾‾
		❌ Task
		#test
		
		2 Header
		‾‾‾‾‾‾‾‾
			3 Header
			‾‾‾‾‾‾‾‾
				❌ Task
				#test
				
				❌ Task 2
				#test
				
		2 Header 2
		‾‾‾‾‾‾‾‾‾‾
			❌ Task
			#test
			Description
