vault-tasks-core/src/parser/snapshots/vault_tasks_core__parser__parser_file_entry__tests__nested_tasks_desc.snap
---
source: vault-tasks-core/src/parser/parser_file_entry.rs
expression: res.first().unwrap()
---
1 Header
‾‾‾‾‾‾‾‾
	❌ t1
	t1
	t1
	t1
	t1
	
		❌ t2
		t2
		t2
		t2
		t2
		
			❌ t3
			t3
			t3
			
				❌ t4
				t4
				t4
